--- a/yummy3.html
+++ b/yummy3.html
@@ -1,10 +1,43 @@
 <!doctype html>
 <html>
 	<head>
+    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/yummy-cake/yummy-cake.github.io/master/barra.css>"
 		<meta charset="utf-8">
     <base href="file:/D:/Yummyimg/">
       <style>
+  /* Add a black background color to the top navigation */
+.topnav {
+  background-color: #ff6961;
+  overflow: hidden;
+  text-align: center;
+  position: absolute;
+  top:110px;
 
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 13px 74px;
+  text-decoration: none;
+  font-size: 17px;
+
+
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #ddd;
+  color: black;
+  border: 1px ridge black;
+  text-decoration: underline;
+}
   #divlogo {
 
     margin-left: -100px;
@@ -58,20 +91,49 @@
   }
   #wats{
     position: absolute;
-    width: 2.5vw;
-    top:500px;
+    width: 5vh;
+    top:95.1vh;
+    left: 2.5vw;
+  }
+  #airplane{
+    position: absolute;
+    width: 5vh;
+    top: 86vh;
+    left: 2.5vw;
+  }
+  #face{
+    position: absolute;
+    width: 5vh;
+    top:103.4vh;
+    left: 2.5vw;
+  }
+  #tel{
+    position: absolute;
+    width: 5vh;
+    top: 111vh;
+    left: 4.7vh;
   }
   </style>
 	</head>
 
   <body>
     
-  <div id="divlogo">  <img alt="logo" id="logo" src= "logo.png"width="200"></div>
-
+  <div id="divlogo">  <img id="logo" src= "logo.png"width="200"></div>
+   <div class="topnav">
+  <a class="active" href="#minicio">Inicio</a>
+  <a href="#mmenu">Menú</a>
+  <a href="#morden">Orden en línea</a>
+  <a href="#mcontacto">Contacto</a>
+  <a href="#quienes">Quiénes somos</a>
+  <a href="#mpersonalizados">Personalizados</a>
+</div> 
 <p id="info1">Calle Pavo Real 15, 63082 Tepic</p><br>
 <p id="info2">01 311 122 9696</p><br>
 <p id="info3">Yummy Cake</p><br>
 <p id="info4">01 311 122 9696</p><br>
 <p id="letras">2019 by YUMMY CAKE™® . All Rights Reserved.</p>
 <img id="wats" src="whatsap.png" alt="whatsap">
+<img id="airplane" src="plane.png">
+<img id="face" src="facebook.png">
+<img id="tel" src="phone.png">
 </body>
